changed the layout of Projects page and added more projecs

--- a/src/languages/locale/arabic/projects.json
+++ b/src/languages/locale/arabic/projects.json
@@ -1,75 +1,100 @@
 {
-    "frontend": {
-        "frontend": "مشاريع",
-        "projects": "واجهات المواقع",
+    "networkprojects": {
+        "network": "",
+        "projects": "مشاريعي",
+
+        "graduationProject": {
+            "title": "الروبوت المتنقل الذكي",
+            "pcontent": "روبوت متنقل ذاتي مزود بذراع، مصمم للتنقل الداخلي. يمكنه العمل بشكل ذاتي أو يتم التحكم به عن بعد عبر شبكة أو اتصال سلكي. معلومات التقدير الذاتي تساعد في تقدير موقع الروبوت بالنسبة إلى موقعه الأصلي. كاميرا Kinect v2 مثبتة على الروبوت تنشئ خريطة SLAM مع اكتشاف الحواف والرؤية الحاسوبية. يتنقل الروبوت بشكل ذاتي عبر الخريطة المحددة مسبقاً باستخدام AMCL ويحتوي على ذراع مثبتة لالتقاط ووضع الأشياء."
+        },
 
         "project1": {
-            "title": "شركة مينت مايند للقهوة",
-            "pcontent": "كانت هذه أول صفحة ويب كاملة اقوم بتطوير واجهتها، شركة مينت مايند للقهوة هي صفحة ويب مستنسخة من صفحة شركة ستاربكس ولكن باللغة الروسية. لماذا الروسية تحديداً؟ حسناً، لأنني في ذلك الوقت كنت قد بدأت للتو بتعلم اللغة الروسية.",
-            "github": "جيت هاب",
-            "livedemo": "عرض مباشر",
-            "githubtitle": "عرض المشروع على جيت هاب",
-            "livedemotitle": "عرض مباشر"
+            "title": "شبكة 1",
+            "pcontent": "هذه شبكة شاملة طورتها في دورة CCNA. في هذه الشبكة، قمت بتطبيق OSPF وROAS وSVI VLANs والتوجيه الطبقي."
         },
 
         "project2": {
-            "title": "روبوت متحرك ذكي",
-            "pcontent": "تم تطوير هذا التطبيق بشكل رئيسي باستخدام React لاستضافة جميع المعلومات حول مشروع التخرج الخاص بي ووثائقه. يحتوي هذا الموقع على جميع المعلومات حول مشروع التخرج الخاص بي، وفريقي، وجميع الوثائق المطلوبة لبناء روبوت مماثل خاص بك."
+            "title": "قريبًا",
+            "pcontent": "لوريم إيبسوم، النص الوهمي المستخدم في تصميم الإعلانات والمجلات."
         },
 
         "project3": {
-            "title": "تطبيق CV بواسطة React",
-            "pcontent": "لقد أنشأت هذا التطبيق بواسطة React ليعمل كنموذج يمكنني من خلاله إنشاء وطباعة سيرتي الذاتية. ما هو مبدع حقًا في هذا التطبيق هو أنه يمكن طباعته مباشرةً إلى ملف PDF. إنه مرن للغاية وتفاعلي للغاية. على سبيل المثال، يمكنني وضع رابط لعرض شهادة دورة في سيرتي الذاتية أو رابط لشركة عملت فيها. لكن الفكرة الرئيسية هي أنه يمكن تحريره وطباعته بسهولة. حتى يمكن لأي شخص يزور الموقع طباعة سيرتي الذاتية عن طريق الضغط فقط على CTRL + P وفويل."
+            "title": "قريبًا",
+            "pcontent": "لوريم إيبسوم، النص الوهمي المستخدم في تصميم الإعلانات والمجلات."
+        },
+
+        "project4": {
+            "title": "قريبًا",
+            "pcontent": "لوريم إيبسوم، النص الوهمي المستخدم في تصميم الإعلانات والمجلات."
+        },
+
+        "project5": {
+            "title": "قريبًا",
+            "pcontent": "لوريم إيبسوم، النص الوهمي المستخدم في تصميم الإعلانات والمجلات."
+        },
+
+        "project6": {
+            "title": "قريبًا",
+            "pcontent": "لوريم إيبسوم، النص الوهمي المستخدم في تصميم الإعلانات والمجلات."
+        }
+    },
+
+    "programming": {
+        "programming": "البرمجة",
+        "projects": "المشاريع",
+
+        "project1": {
+            "title": "شركة Mint Mind Coffee",
+            "pcontent": "كان هذا أول موقع إلكتروني أنشأته على الإطلاق. شركة Mint Mind Coffee هي موقع نسخة من موقع شركة Starbucks باللغة الروسية. لماذا بالروسية؟ لأنني في ذلك الوقت كنت قد بدأت للتو في تعلم اللغة الروسية.",
+            "github": "Github",
+            "livedemo": "عرض مباشر",
+            "githubtitle": "عرض على Github",
+            "livedemotitle": "عرض العرض المباشر"
+        },
+
+        "project2": {
+            "title": "موقع مشروع التخرج",
+            "pcontent": "تم تطوير هذا التطبيق بشكل أساسي باستخدام React لاستضافة جميع المعلومات حول مشروع تخرجي ووثائقه. يحتوي هذا الموقع على جميع المعلومات حول مشروع تخرجي، وفريقي، وجميع الوثائق المطلوبة لبناء روبوت مشابه."
+        },
+
+        "project3": {
+            "title": "تطبيق CV React",
+            "pcontent": "أنشأت هذا التطبيق ريأكت ليعمل كقالب يمكنني من خلاله إنشاء وطباعه سيرتي الذاتية. ما هو مبدع حقاً في هذا التطبيق هو أنه يمكن طباعته مباشرة إلى ملف PDF، وهو مرن للغاية وتفاعلي. على سبيل المثال، يمكنني وضع رابط لرؤية اعتماد دورة في سيرتي الذاتية أو رابط لشركة عملت بها. الفكرة الرئيسية هي أن تكون السيرة الذاتية قابلة للتعديل والطباعه بسهولة. حتى أي شخص يزور الموقع يمكنه طباعة سيرتي الذاتية بمجرد الضغط على CTRL + P وها هي."
         },
 
         "project4": {
             "title": "ملفي الشخصي",
-            "pcontent": "هذا التطبيق React حقًا مدهش. إنه مدونة وسيرة ذاتية ومحفظة. مترجم إلى أربع لغات مع رسوم متحركة رائعة في كل مكان وأداء مثلى. لقد قمت بإنشاء هذا الموقع ليس فقط لعرض عملي، ولكن أيضًا لمساعدة الناس من خلال مدونتي حيث أنشر شروحًا حول العديد من المواضيع وأساعد الناس. باستخدام CSS و React و i18next، تحقق هذا المشروع."
+            "pcontent": "هذا التطبيق React مذهل حقاً. إنه مدونة، وسيرة ذاتية، ومحفظة أعمال. مترجم إلى أربع لغات مع رسوم متحركة رائعة وأداء مثالي. أنشأت هذا الموقع ليس فقط لعرض عملي، بل أيضًا لمساعدة الأشخاص من خلال مدونتي حيث أنشر شروحات حول العديد من المواضيع وأساعد الأشخاص. مع CSS وReact وi18next، أصبح هذا المشروع حقيقة."
         },
 
         "project5": {
-            "title": "قريبًا",
-            "pcontent": "نص عشوائي باللغة العربية"
+            "title": "Vigenere Cipher",
+            "pcontent": "هذا تطبيق شيفرة فيجينير مبني باستخدام C#. يتم استخدامه للتشفير وفك التشفير للنص باستخدام مفتاح. شيفرة فيجينير هي تقنية تشفير كلاسيكية توفر طريقة لتشفير وفك تشفير الرسائل. إنها شيفرة استبدال تستخدم كلمة رئيسية أو عبارة لتحديد تغييرات الحروف في النص الواضح."
         },
 
         "project6": {
-            "title": "قريبًا",
-            "pcontent": "نص عشوائي باللغة العربية"
-        }
-    },
-
-    "ciscopackettracer": {
-        "cisco": "سيسكو",
-        "packettracer": "باكيت تريسر",
-
-        "project1": {
-            "title": "الشبكة ١",
-            "pcontent": "هذه عبارة عن شبكة شاملة قمت فيها بتطبيقها في دورة CCNA. وقمت فيها بتطبيق الOSPF و ROAS و SVI و VLANs و classful routing."
+            "title": "Caesar Cipher",
+            "pcontent": "هذا تطبيق شيفرة سيزر مبني باستخدام C#. يتم استخدامه للتشفير وفك التشفير للنص باستخدام مفتاح. يتم التشفير عن طريق استبدال كل حرف بحرف آخر يقع بعده بعدة حروف في الأبجدية، ويتم تحديد الفرق بين الحرف الممثل والحرف الذي يمثله بواسطة المفتاح، والمفتاح هو ببساطة مقدار الحروف التي سنتخطاها حتى نصل إلى الحرف الممثل."
         },
 
-        "project2": {
-            "title": "قريبًا",
-            "pcontent": "نص عشوائي باللغة العربية"
+        "project7": {
+            "title": "تطبيق الطقس",
+            "pcontent": "هذا المشروع هو تطبيق طقس يأخذ رمزك البريدي كمدخل ويعطيك جميع معلومات الطقس. يتطلب هذا المشروع إنشاء تطبيق ويب غير متزامن يستخدم Web API وبيانات المستخدم لتحديث واجهة المستخدم ديناميكيًا. كان هذا المشروع جزءًا من منحة Udacity في برنامج تطوير الويب الاحترافي للواجهة الأمامية."
         },
 
-        "project3": {
-            "title": "قريبًا",
-            "pcontent": "نص عشوائي باللغة العربية"
+        "project8": {
+            "title": "Plurality",
+            "pcontent": "هذا برنامج يحاكي نظام تصويت التعددية. في هذا النظام، يصوت كل ناخب لمرشح واحد، والمرشح الذي يحصل على أكثر الأصوات يفوز. البرنامج قادر على التعامل مع مرشحين متعددين وتحديد الفائز (أو الفائزين في حالة التعادل) بناءً على الأصوات المدلى بها."
         },
 
-        "project4": {
-            "title": "قريبًا",
-            "pcontent": "نص عشوائي باللغة العربية"
+        "project9": {
+            "title": "Readablility",
+            "pcontent": "هذا برنامج يحسب مؤشر Coleman-Liau للنص المحدد، وهو اختبار قابلية القراءة الذي يهدف إلى تحديد المستوى الدراسي المطلوب لفهم النص. يطلب البرنامج من المستخدم إدخال سلسلة من النصوص، ويقوم بعد ذلك بحساب عدد الأحرف والكلمات والجمل، ثم يحسب المؤشر باستخدام الصيغة: المؤشر = 0.0588 × L − 0.296 × S − 15.8 حيث L هو متوسط عدد الأحرف لكل 100 كلمة، وS هو متوسط عدد الجمل لكل 100 كلمة."
         },
 
-        "project5": {
-            "title": "قريبًا",
-            "pcontent": "نص عشوائي باللغة العربية"
-        },
-
-        "project6": {
-            "title": "قريبًا",
-            "pcontent": "نص عشوائي باللغة العربية"
+        "project10": {
+            "title": "Cash",
+            "pcontent": "هذا برنامج يحسب الحد الأدنى من العملات المطلوبة لإعطاء المستخدم الباقي. يقوم المستخدم بإدخال المبلغ المستحق، ويقوم البرنامج بإخراج أقل عدد من العملات المطلوبة لتكوين هذا الباقي باستخدام الفئات النقدية الأمريكية (الربع، الدايم، النيكل، والبنس). يعتمد الخوارزمية المستخدمة في هذا الواجب على خوارزمية الجشع."
         }
     }
 }
