--- a/src/languages/locale/russian/projects.json
+++ b/src/languages/locale/russian/projects.json
@@ -1,75 +1,100 @@
 {
-  "frontend": {
-    "frontend": "Фронтенд",
-    "projects": "Проекты",
+    "networkprojects": {
+        "network": "Моя",
+        "projects": "Проекты",
 
-    "project1": {
-      "title": "Компания Mint Mind Coffee",
-      "pcontent": "Это был первый сайт, который я когда-либо создал. Компания Mint Mind Coffee - это клон веб-сайта компании Starbucks, но на русском языке. Почему на русском? Ну, потому что тогда я только начал изучать русский язык.",
-      "github": "Github",
-      "livedemo": "Прямой эфир",
-      "githubtitle": "Посмотреть на Github",
-      "livedemotitle": "Посмотреть прямой эфир"
+        "graduationProject": {
+            "title": "Интеллектуальный мобильный робот",
+            "pcontent": "Автономный мобильный робот с рукой, предназначенный для навигации внутри помещений. Он может работать автономно или управляться дистанционно через сеть или проводное соединение. Информация об одометрии оценивает положение робота относительно его исходной точки. Камера Kinect v2, установленная на роботе, создает карту SLAM с обнаружением краев и компьютерным зрением. Робот автономно перемещается по предварительно заданной карте, используя AMCL, и оснащен рукой для захвата и перемещения объектов."
+        },
+
+        "project1": {
+            "title": "Сеть 1",
+            "pcontent": "Это комплексная сеть, которую я разработал в своем курсе CCNA. В этой сети я применил OSPF, ROAS и SVI VLANs, а также классовую маршрутизацию."
+        },
+
+        "project2": {
+            "title": "Скоро",
+            "pcontent": "Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla, sequi."
+        },
+
+        "project3": {
+            "title": "Скоро",
+            "pcontent": "Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla, sequi."
+        },
+
+        "project4": {
+            "title": "Скоро",
+            "pcontent": "Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla, sequi."
+        },
+
+        "project5": {
+            "title": "Скоро",
+            "pcontent": "Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla, sequi."
+        },
+
+        "project6": {
+            "title": "Скоро",
+            "pcontent": "Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla, sequi."
+        }
     },
 
-    "project2": {
-      "title": "Интеллектуальный мобильный робот",
-      "pcontent": "Это приложение в основном разработано с использованием React для размещения всей информации о моем проекте по окончании обучения и его документации. Этот веб-сайт содержит всю информацию о моем проекте по окончании обучения, моей команде и всей необходимой документации, необходимой для создания своего собственного подобного робота."
-    },
+    "programming": {
+        "programming": "Программирование",
+        "projects": "Проекты",
 
-    "project3": {
-      "title": "CV React App",
-      "pcontent": "Я создал это приложение React для работы как шаблон, на котором я могу создавать и печатать свое резюме. Особенностью этого приложения для резюме является возможность его напрямую печатать в файл PDF. Оно крайне гибкое и супер интерактивное. Например, я могу добавить ссылку для просмотра удостоверения о курсе в своем резюме или ссылку на компанию, где я работал. Главная идея заключается в том, чтобы редактировать и печатать его легко. Так что любой посетитель сайта может напечатать мое резюме, просто нажав CTRL + P, и вуаля."
-    },
+        "project1": {
+            "title": "Компания Mint Mind Coffee",
+            "pcontent": "Это был первый сайт, который я когда-либо создавал. Компания Mint Mind Coffee — это клон веб-сайта компании Starbucks, но на русском языке. Почему на русском? Потому что в то время я только начинал изучать русский язык.",
+            "github": "Github",
+            "livedemo": "Демо-версия",
+            "githubtitle": "Просмотреть на Github",
+            "livedemotitle": "Просмотреть демо-версию"
+        },
 
-    "project4": {
-      "title": "Мой профиль",
-      "pcontent": "Это действительно удивительное приложение React. Это блог, резюме и портфолио. Переведено на четыре языка с потрясающими анимациями и оптимальной производительностью. Я создал этот веб-сайт не только для демонстрации своей работы, но и чтобы помогать людям через мой блог, где я публикую объяснения по многим темам и помогаю людям. С помощью CSS, React и i18next этот проект стал реальностью."
-    },
+        "project2": {
+            "title": "Сайт для дипломного проекта",
+            "pcontent": "Это приложение было разработано с использованием React, чтобы разместить всю информацию о моем дипломном проекте и его документации. Этот сайт содержит всю информацию о моем дипломном проекте, моей команде и всю необходимую документацию для создания аналогичного робота."
+        },
 
-    "project5": {
-      "title": "Скоро",
-      "pcontent": "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla, sequi."
-    },
+        "project3": {
+            "title": "Приложение CV на React",
+            "pcontent": "Я создал это приложение на React, чтобы оно служило шаблоном для создания и печати моего резюме. Что действительно креативного в этом приложении для резюме — это возможность печати напрямую в PDF файл, оно чрезвычайно гибкое и интерактивное. Например, я могу добавить ссылку для просмотра подтверждения курса в своем резюме или ссылку на компанию, в которой я работал. Но главная идея заключается в том, чтобы оно было легко редактируемым и печатаемым. Любой, кто зайдет на сайт, может распечатать мое резюме, просто нажав CTRL + P, и готово."
+        },
 
-    "project6": {
-      "title": "Скоро",
-      "pcontent": "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla, sequi."
+        "project4": {
+            "title": "Мой профиль",
+            "pcontent": "Это приложение на React действительно удивительное. Это блог, резюме и портфолио. Переведено на четыре языка с потрясающими анимациями и отличной производительностью. Я создал этот сайт не только для того, чтобы показать свою работу, но и для того, чтобы помогать людям через блог, на котором я публикую объяснения на различные темы и помогаю людям. С помощью CSS, React и i18next этот проект стал реальностью."
+        },
+
+        "project5": {
+            "title": "Шифр Виженера",
+            "pcontent": "Это приложение для шифра Виженера на Windows, созданное с использованием C#. Оно используется как для шифрования, так и для дешифрования текста с использованием ключа. Шифр Виженера — это классическая техника шифрования, которая предоставляет метод шифрования и дешифрования сообщений. Это шифр подстановки, который использует ключевое слово или фразу для определения смещения букв в исходном тексте."
+        },
+
+        "project6": {
+            "title": "Шифр Цезаря",
+            "pcontent": "Это приложение для шифра Цезаря на Windows, созданное с использованием C#. Оно используется как для шифрования, так и для дешифрования текста с использованием ключа. Шифрование выполняется путем замены каждой буквы другой буквой, находящейся немного дальше в алфавите. Разница между представляемой буквой и представляющей буквой определяется ключом, ключ — это количество букв, которые мы будем пропускать, пока не достигнем представляющей буквы."
+        },
+
+        "project7": {
+            "title": "Приложение для прогноза погоды",
+            "pcontent": "Этот проект представляет собой приложение для погоды, которое принимает ваш почтовый индекс в качестве входных данных и выводит всю информацию о погоде. Этот проект требует создания асинхронного веб-приложения, которое использует Web API и данные пользователя для динамического обновления интерфейса. Этот проект был частью стипендии Udacity в рамках профессионального обучения Frontend Web Development Nanodegree."
+        },
+
+        "project8": {
+            "title": "Plurality",
+            "pcontent": "Это программа, которая имитирует систему голосования с множеством кандидатов. В этой системе каждый избиратель отдает голос за одного кандидата, и кандидат, получивший наибольшее количество голосов, побеждает. Программа может обрабатывать нескольких кандидатов и определять победителя (или победителей в случае ничьей) на основе поданных голосов."
+        },
+
+        "project9": {
+            "title": "Читаемость",
+            "pcontent": "Это программа, которая вычисляет индекс Coleman-Liau для заданного текста, который является тестом читаемости, предназначенным для определения уровня образования, необходимого для понимания текста. Программа запрашивает у пользователя строку текста, подсчитывает количество букв, слов и предложений, а затем вычисляет индекс с помощью формулы: индекс = 0.0588 × L − 0.296 × S − 15.8, где L — это среднее количество букв на 100 слов, а S — среднее количество предложений на 100 слов."
+        },
+
+        "project10": {
+            "title": "Cash",
+            "pcontent": "Это программа, которая вычисляет минимальное количество монет, необходимых для выдачи сдачи пользователю. Пользователь вводит сумму сдачи, и программа выводит минимальное количество монет, необходимых для этого, используя номиналы валют США (четверти, десятицентовики, пятниценты и пенни). Алгоритм, используемый в этом задании, основан на жадном алгоритме."
+        }
     }
-  },
-
-  "ciscopackettracer": {
-    "cisco": "трассировщик пакетов",
-    "packettracer": "Cisco",
-
-    "project1": {
-      "title": "Сеть 1",
-      "pcontent": "Это обширная сеть, которую я разработал в рамках курса CCNA. В этой сети я использовал OSPF, ROAS и SVI VLANs, а также классовую маршрутизацию."
-    },
-
-    "project2": {
-      "title": "Скоро",
-      "pcontent": "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla, sequi."
-    },
-
-    "project3": {
-      "title": "Скоро",
-      "pcontent": "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla, sequi."
-    },
-
-    "project4": {
-      "title": "Скоро",
-      "pcontent": "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla, sequi."
-    },
-
-    "project5": {
-      "title": "Скоро",
-      "pcontent": "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla, sequi."
-    },
-
-    "project6": {
-      "title": "Скоро",
-      "pcontent": "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla, sequi."
-    }
-  }
 }
