changed About section's paragraph and translated it.

--- a/src/languages/locale/arabic/home.json
+++ b/src/languages/locale/arabic/home.json
@@ -42,8 +42,8 @@
     "about": {
         "about": "معلومات",
         "me": "عني",
-        "job": "مطور واجهة المستخدم",
-        "pcontent": "مرحبًا، اسمي مصطفى، أنا شغوف بالحوسبة السحابية وهندسة الشبكات والبرمجة وأنظمة التشغيل. أنا دائمًا أتعلم المزيد عنها، وأعتقد أنني سأتقنها جميعًا يومًا ما لأنني أصبحت أحب هذا المجال. تخصصاتي هي هندسة الشبكات والهندسة السحابية مع خبرة تزيد عن عام في تطوير الويب.",
+        "job": "مهندس شبكات",
+        "pcontent": "مرحبًا، اسمي مصطفى، مهندس شبكات متحمس للغاية وحاصل على درجة البكالوريوس في هندسة الكمبيوتر والتحكم. أتقن تكوين أجهزة الشبكة واستكشاف أخطائها وإصلاحها وتصميم هياكل الشبكة وتقديم الدعم الفني. أبحث عن دور للمساهمة في حلول تكنولوجيا المعلومات المبتكرة والآمنة مع تطوير خبرتي وتعزيز التعلم والتعاون. أنا شغوف بشدة بهندسة الحوسبة السحابية والشبكات والبرمجة وأنظمة التشغيل. أتعلم وأتطور باستمرار في هذه المجالات، وأنا ملتزم بإتقانها من خلال الممارسة المخلصة وحماسي الثابت لهذا المجال. تخصصاتي هي هندسة الشبكات وهندسة الحوسبة السحابية مع خبرة تزيد عن عام واحد في تطوير الويب.",
         "button": "اقرأ المزيد"
     },
 
