--- a/src/languages/locale/english/home.json
+++ b/src/languages/locale/english/home.json
@@ -43,8 +43,8 @@
     "about": {
         "about": "About",
         "me": "Me",
-        "job": "Frontend Developer",
-        "pcontent": "Hello, my name is Mostafa, I am passionate about Cloud and Network engineering, programming and operating systems. I'm always learning more about them, and I believe that one day I'm going to master them all because I've grown in love with this field. My specialities are Network Engineering, Cloud Engineering with 1+ year of experience in web development.",
+        "job": "Network Engineer",
+        "pcontent": "Hello, my name is Mostafa, A Highly motivated Network Engineer with a Bachelor's degree in Computer and Control Engineering. Proficient in configuring and troubleshooting network devices, designing network architectures, and providing technical support. Seeking a role to contribute to innovative and secure IT solutions while advancing my expertise and fostering my learning and collaboration. I am deeply passionate about Cloud and Network engineering, programming, and operating systems. Continuously learning and evolving in these areas, I am committed to mastering them through dedicated practice and my unwavering enthusiasm for this field. My specialities are Network Engineering, Cloud Engineering with 1+ year of experience in web development.",
         "button": "Read More"
     },
 
