--- a/src/languages/locale/german/home.json
+++ b/src/languages/locale/german/home.json
@@ -42,8 +42,8 @@
   "about": {
     "about": "Über",
     "me": "Mich",
-    "job": "Frontend-Entwickler",
-    "pcontent": "Hallo, mein Name ist Mostafa, ich interessiere mich leidenschaftlich für Cloud- und Netzwerktechnik, Programmierung und Betriebssysteme. Ich lerne immer mehr über sie und glaube, dass ich sie eines Tages alle beherrschen werde, weil ich mich in dieses Fachgebiet verliebt habe. Meine Spezialgebiete sind Network Engineering und Cloud Engineering mit mehr als einem Jahr Erfahrung in der Webentwicklung.",
+    "job": "Netzwerkingenieur",
+    "pcontent": "Hallo, mein Name ist Mostafa, ein hochmotivierter Netzwerkingenieur mit einem Bachelor-Abschluss in Computer- und Steuerungstechnik. Erfahren in der Konfiguration und Fehlerbehebung von Netzwerkgeräten, dem Entwerfen von Netzwerkarchitekturen und der Bereitstellung von technischem Support. Ich suche eine Rolle, in der ich zu innovativen und sicheren IT-Lösungen beitragen und gleichzeitig mein Fachwissen erweitern und mein Lernen und meine Zusammenarbeit fördern kann. Ich bin zutiefst begeistert von Cloud- und Netzwerktechnik, Programmierung und Betriebssystemen. Ich lerne und entwickle mich in diesen Bereichen ständig weiter und bin entschlossen, sie durch engagierte Übung und meine unerschütterliche Begeisterung für dieses Feld zu meistern. Meine Spezialgebiete sind Netzwerktechnik und Cloudtechnik mit über einem Jahr Erfahrung in der Webentwicklung.",
     "button": "Weiterlesen"
   },
 
