--- a/src/languages/locale/russian/home.json
+++ b/src/languages/locale/russian/home.json
@@ -42,8 +42,8 @@
     "about": {
         "about": "Обо",
         "me": "мне",
-        "job": "Фронтенд-разработчик",
-        "pcontent": "Здравствуйте, меня зовут Мостафа, я увлечен облачной и сетевой инженерией, программированием и операционными системами. Я всегда узнаю о них больше, и я верю, что однажды я овладею ими всеми, потому что я полюбил эту область. Мои специальности - сетевая инженерия и облачная инженерия с опытом работы в веб-разработке более 1 года.",
+        "job": "Сетевой инженер",
+        "pcontent": "Привет, меня зовут Мостафа, высокомотивированный сетевой инженер со степенью бакалавра в области вычислительной техники и управления. Опыт настройки и устранения неполадок сетевого оборудования, проектирования сетевых архитектур и предоставления технической поддержки. Я ищу роль, в которой я мог бы вносить свой вклад в инновационные и безопасные ИТ-решения, одновременно расширяя свой опыт и способствуя обучению и сотрудничеству. Я глубоко увлечен облачными и сетевыми технологиями, программированием и операционными системами. Я постоянно учусь и развиваюсь в этих областях и полон решимости овладеть ими с помощью самоотверженной практики и своего непоколебимого энтузиазма в этой области. Я специализируюсь в области сетевой инженерии и облачной инженерии с более чем годовым опытом веб-разработки.",
         "button": "Читать далее"
     },
 
